examples/pts/pos/blockParameter.effekt
module examples/pts/pos/blockParameter

def param(x: Int, y: Int): Int = x + y

def func1{f: _}: Boolean = f(1, 2) == 2

def main() = {
    ()
}